FIX(menu layout): se agrega un overflow auto para pantallas con mucho zoom

--- a/front/src/pages/login/Login.css
+++ b/front/src/pages/login/Login.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 .login-container .language-selector{
@@ -25,6 +25,8 @@
     width: calc(100% - 30px);
     max-width: 800px;
     color: white;
+    overflow-y: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .login-container .login-card .login-card-content .login-form{
